--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=28082
 spring.thymeleaf.cache=false
-spring.mvc.static-path-pattern=/static/**
-spring.resources.static-locations=classpath:/static
+#spring.mvc.static-path-pattern=/static/**
+#spring.resources.static-locations=classpath:/static
 
 # datasource config
 #spring.datasource.name=ycpp
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.96.12.8:3306/ycppdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://47.96.12.8:3306/ycppdb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=ycpp123456
 spring.datasource.hikari.minimum-idle=5
